plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.asdf'
version = '0.0.1-dev'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()

	testLogging {
		// 테스트 이벤트 중 어떤 것을 로그로 출력할지 설정
		events "passed", "skipped", "failed"
		outputs.upToDateWhen { false }
		jvmArgs '-XX:+EnableDynamicAgentLoading'
	}
}

spotless {
	java {
		googleJavaFormat('1.22.0').aosp().reflowLongStrings()
	}
}

build.dependsOn 'spotlessApply'